# test

./: .bash_aliases  .gitignore  CMakeLists.txt  makefile
.cache/clangd/index/: Lagrange_1D.cpp.D36099F739375CB3.idx  Lagrange_1D.h.0D1E5B570AFEE46D.idx  Parameters.cpp.71095DF530C2EE4E.idx  Parameters.h.B013BA2050AED983.idx  custom_concepts.h.2A79D4DDFE07837B.idx  error_handling.h.3BA4FCEA1A16460F.idx  iSolver.h.BBE10A166FB78253.idx  io_auxiliary.cpp.F171EECA8AF56AC4.idx  io_auxiliary.h.0833AECD7A3D8B79.idx  main.cpp.79261F75140EEDAB.idx
data/: 1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  3.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv  4.csv  40.csv  41.csv  42.csv  43.csv  44.csv  45.csv  (+60 more)
headers/: IO.h  Lagrange_1D.h  Parameters.h  Solver.h  custom_concepts.h  elasticity_Lagrange_1D.h  elasticity_Lagrange_1D_Parameters.h  error_handling.h  iSolver.h  io_auxiliary.h
scenarios/: scenario1_with_errors  scenario2  scenario3_Lagrange.scen  scenario4_el_L1D.scen
source/: Lagrange_1D.cpp  Parameters.cpp  Solver.cpp  elasticity_Lagrange_1D.cpp  elasticity_Lagrange_1D_Parameters.cpp  io_auxiliary.cpp  main.cpp  post.py
